메인화면에서 레벨,직업 UI 삭제제

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div id="game-container">
-        <div class="ui-overlay">
+        <div class="ui-overlay" id="game-ui" style="display: none;">
             <div id="stats">레벨: 1 | HP: 100/100 | 직업: 슬라임</div>
             <div id="controls">WASD: 이동 | SPACE: 스킬 | Q: 전직</div>
         </div>
