--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <div id="controls">WASD: 이동 | SPACE: 스킬 | Q: 전직</div>
         </div>
     </div>
+    <!-- Load shared modules first -->
+    <script src="/shared/JobClasses.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html> 
