--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <div id="hp">HP: 100/100</div>
                 <div id="job">직업: 슬라임</div>
                 <div id="exp">경험치: 0/100</div>
+                <div id="ping">핑: --ms</div>
             </div>
         </div>
     </div>
